<resources>
    <string name="app_name">My Mart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gro_home">GroHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_grocc_home">GroccHomeActivity</string>
    <string name="profile">Profile</string>
    <string name="category">Category</string>
    <string name="offers">Offers</string>
    <string name="my_orders">My Orders</string>
    <string name="my_carts">My Carts</string>

</resources>